Acrescentado apresentação power point dos APKs

--- a/Vendas.html
+++ b/Vendas.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Página de Vendas</h1>
+    <p>Apresentação power point dos projetos de apk desenvolvidos</p>
     <a href="index.html">Voltar para página inicial</a>
 </body>
 </html>
